--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -8,7 +8,7 @@
         <div class="card-body">
             <div id="typography">
                 <div class="card-title">
-                    <h2>Typography</h2>
+                    <h2>Login</h2>
                 </div>
                 <div class="row">
                     <div class="tim-typo">
