Edit popover for tooltip and Fixed ui, and the last one is angular.json you can checkit if it error

--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -4790,7 +4790,7 @@ button.close {
 .popover {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0; /*0*/
   z-index: 1060;
   display: block;
   max-width: 276px;
@@ -11874,12 +11874,12 @@ h2.title {
 
 .popover, .tooltip-inner {
   line-height: 1.5em;
-  background: #fff;
+  background: black; /*เดิมสีขาว*/
   border: none;
   border-radius: 3px;
   -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
           box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
-  color: #555; }
+  color: #ffff; /*#555*/}
 
 .popover {
   padding: 0;
