--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -8,23 +8,29 @@
     align-items: center;
     
 }
+.card-body{
 
+  font-family: 'TH SarabunPSK', sans-serif; /*ใช้ฟอนต์ราชการ*/
+}
 .modal-body-detail{ 
   position: relative;
     display: flex;
     flex-direction: column;
-    margin-top:10px;
+    margin-top:10mm;
+    margin-bottom: 10mm;
    left: 50%;
    transform: translateX(-50%);
-
     width: 100%;
     border: 1px solid #000;
     font-family: 'TH SarabunPSK', sans-serif; /* ใช้ฟอนต์ราชการ */
 
     
 }
+
 .modal-content{
-  left: 5.5px;
+ 
+  left: 50%;
+  transform: translateX(-50%);
   justify-content: center;
   
 }
@@ -72,12 +78,27 @@ label{
 }
 .full-page-textarea-container{
     width: 100%;
-    height: 100%;
+    padding: 10px;
     display: flex;
     justify-content: center;
-    align-items: center;
+  
+    border: 1px solid black;
+    border-radius: 5px;
   
 
+}
+
+.writteDraw{
+  width: 827px;
+  height: 535px; 
+  border: none;
+  resize: none;
+  border: 1px solid black;
+  border-radius: 5px;
+
+}
+.full-page-textarea-container textarea{
+  border: 5px;
 }
 
 .btn-warning:hover::after {
@@ -200,9 +221,7 @@ label{
   .sign-content img{
     width: 30mm;   
     height: 20mm;
-    border: 1px solid #ddd;
+    
     margin-left: 58px;
    
   }
-
- 
