--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -29,18 +29,22 @@
     &[data-background-color="black"]{
         background-color: #191919;
     }
-    .logo-img{
-        width: 35px;
-        display: block;
-        max-height: 30px;
-        margin-left: 13px;
-        margin-right: 15px;
+    // .logo-img{
+    //     width: 35px;
+    //     display: block;
+    //     max-height: 30px;
+    //     margin-left: 13px;
+    //     margin-right: 15px;
 
-        img{
-            width: 35px;
-            top: 16px;
-            position: absolute;
-        }
+    //     img{
+    //         width: 35px;
+    //         top: 16px;
+    //         position: absolute;
+    //     }
+    // }
+    .logo-img img{
+        width: 200px;
+        
     }
     .sidebar-wrapper{
         position: relative;
