--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -152,29 +152,32 @@ label{
 }
 .openSignModal{
   position: relative;
-  margin-left: 40px;
-  align-items: center;
-  padding-left: 50px;
+
   display: flex;
-  width: 40mm;
-  height: 30mm;
+  width: 30mm;
+  height: 20mm;
   border: 2px dashed orange;
   background: repeating-linear-gradient(-45deg,  rgb(253, 216, 4) 4px, transparent,  transparent 10px );
   border-radius: 5px;
   border-style:dashed ;
   opacity: 0.5;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   cursor: pointer;
-
+  transition: 0.3s;
+}
+.openSignModal:hover{
+  box-shadow: 0 14px 20px -12px rgb(253, 216, 4), 0 4px 15px 0px rgba(211, 211, 211, 0.12), 0 2px 5px -5px rgb(253, 216, 4);
+  opacity: 0.9;
 }
 .Writte-sign {
   position: absolute;
- 
+  left: 50px;
   display: flex; /* Hidden by default */
   top: 0;
-  left: 39.5px;
   width: 100%;
-  height: 30mm;
+  height: 20mm;
   background-color: rgb(255, 254, 254); /* Semi-transparent background */
   z-index: 1000; /* Higher than other content */
  
@@ -184,8 +187,8 @@ label{
 
 .full-page-signWritte{
  
-  width: 40mm;
-  height: 30mm;
+  width: 30mm;
+  height: 20mm;
   border-radius: 5px;
   border: 1px solid black;
   z-index: 1001;
@@ -356,6 +359,7 @@ label{
   }
   .UploadContentBox{
     position: relative;
+    display: flex;
     align-items: center;
     justify-content: center;
   }
