--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -48,7 +48,7 @@
 
           <div class="card-body">
             <div class="table-responsive">
-              <table width="100%" datatable [dtOptions]="dtOptions"
+              <table width="100%" datatable [dtOptions]="dtOptions" 
                 class="table table-border table-hover table-bordered nowrap">
                 <thead class="text-primary">
                   <tr>
@@ -59,9 +59,9 @@
                     <th class="text-center"><i class="fa fa-gear"></i></th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let item of items?.records">
+                <tbody >
                   <!---->
-                  <tr>
+                  <tr *ngFor="let item of items?.records">
 
 
                     <td style=" text-align: center;">
@@ -356,19 +356,22 @@
                                   style="max-width: 100px; max-height: 100px; display: block; margin-top: 10px;">
                               </div> -->
                               <div class="openSignModal" (click)="openSignModal(i)">
-                                <p>คลิกเพื่อเซ็น</p>
+                                <a>คลิกเพื่อเซ็น</a>
                                 
                               </div>
                               <!-- Sign modal -->       
                               <div class="Writte-sign"  #writteSignElement id="SignModal-{{i}}" *ngIf="isSignModalVisible[i]">
                                 <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error someting with
                                   canvas</canvas>
+                                  <button (click)="refreshSignCanvas(i)"  style="border: none; background: none;">
+                                    <i data-toggle="tooltip" title="ลบ" data-placement="top"
+                                      class="fa fa-refresh"></i></button>
                               </div>
                     
 
                             </div>
 
-                            <a>{{ person.view_rank }} &nbsp; &nbsp; {{ person.view_full_name }} </a>
+                            <a>( {{ person.view_rank }} &nbsp; &nbsp; {{ person.view_full_name }} )</a>
                           </div>
                         </div>
                       </div>
@@ -440,7 +443,7 @@
                         <div class="typroTextBox">
                           <div class="headerText">
                             <button aria-label="Preview">การพิมพ์ข้อความ</button>
-                            <button aria-label="Bold">
+                            <button aria-label="Bold" (click)="applyStyle('bold')">
                               <i class="fas fa-bold"></i>
                             </button>
                             <button aria-label="Italic">
