--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -443,7 +443,7 @@
                         <div class="typroTextBox">
                           <div class="headerText">
                             <button aria-label="Preview">การพิมพ์ข้อความ</button>
-                            <button aria-label="Bold" (click)="applyStyle('bold')">
+                            <button (click)="formatText('bold')">
                               <i class="fas fa-bold"></i>
                             </button>
                             <button aria-label="Italic">
