--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -81,7 +81,7 @@
                       </button>&nbsp;
 
 
-                      <button (click)="onRecord(item._id)" style="border: none; background: none;" class="text-primary">
+                      <button (click)="onRecord(items?.records._id)" style="border: none; background: none;" class="text-primary">
                         <i class="fa fa-pencil-square-o text-primary" style="color: black;"></i>
                       </button> &nbsp;
 
@@ -346,7 +346,7 @@
                         <tbody>
                           <tr>
                             <td>{{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}</td>
-                            <td>{{ typroText }}</td>
+                            <td>{{   detailItems?.record_content }}</td>
                           </tr>
                         </tbody>
                       </table>
@@ -400,14 +400,11 @@
           <!--[formGroup]="Form" (ngSubmit)="addPersonCommit(Form.value)" modal อันที่เป็นของ add person หน้าเล็กๆๆ ถูกลบออกนะ-->
 
           <!-- จดบันทึก-->
-          <div class="modal fade" id="writtenModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
+          <div class="modal fade" id="writtenModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header card-header card-header-danger" style="background: rgb(255, 209, 0)">
                   <h5 style="color: white;" class="modal-title" id="myModalLabel">จดบันทึก</h5>
-
-
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -418,49 +415,38 @@
                       <div class="section">
                         &nbsp;
                         <button class="btn btn-just-icon" [ngClass]="{'active': activeButton === 'typro'}"
-                          (click)="setActive('typro')">
+                                (click)="setActive('typro')">
                           <i class="fa fa-file-word-o"></i>
                         </button>
                         &nbsp;
                         <button class="btn btn-just-icon" [ngClass]="{'active': activeButton === 'writte'}"
-                          (click)="setActive('writte')">
+                                (click)="setActive('writte')">
                           <i class="fa fa-pencil-square-o"></i>
                         </button>
                       </div>
                     </div>
                     <div class="col-md-12" class="modal-body" style="width: 210mm; height: 297mm"
-                      [ngStyle]="{ height: '210mm' }">
-
+                         [ngStyle]="{ height: '210mm' }">
                       <div *ngIf="isTyproActive" class="full-page-textarea-container">
-
-
-                      
-                        <textarea [(ngModel)]="typroText"  placeholder="พิมพ์ที่นี้.."
-                          class="form-control mt-3 full-page-textarea"></textarea>
-
+                        <textarea [(ngModel)]="typroText" placeholder="พิมพ์ที่นี้.."
+                                  class="form-control mt-3 full-page-textarea"></textarea>
                       </div>
                       <div *ngIf="isWritteActive" class="full-page-pdf">
                         <a> writte section</a>
-
                       </div>
-
-
                     </div>
                   </div>
                 </div>
-
                 <div class="modal-footer">
-                  <button type="submit" class="btn btn-success pull-center" (click)="recordCommit(item._id)">
+                  <button type="submit" class="btn btn-success pull-center" (click)="recordCommit(selectedRecordId)">
                     <i class="fa fa-check"></i>&nbsp; ยืนยัน
                   </button>
                   <button type="button" class="btn btn-danger pull-center" data-dismiss="modal">
                     <i class="fa fa-times"></i>&nbsp; ปิด
                   </button>
                 </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-
 
     </div>  
